<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_gray"
        tools:context=".Pruefung1Fragment">


        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="126dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="127dp"
            android:text="@string/G607_Header"
            android:textColor="@color/orange"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_test_a"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="56dp"
            android:text="@string/test_a"
            android:textColor="@color/white"
            android:textSize="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_2" />

        <Switch
            android:id="@+id/switch_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:text="OK"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_2"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/tv_test_b"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/test_b"
            android:textColor="@color/white"
            android:textSize="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_test_a" />

        <Switch
            android:id="@+id/switch_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:text="OK"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_a"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/tv_test_c"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/test_c"
            android:textColor="@color/white"
            android:textSize="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_test_b" />

        <Switch
            android:id="@+id/switch_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="40dp"
            android:text="OK"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_b"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/tv_test_d"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/test_d"
            android:textColor="@color/white"
            android:textSize="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_test_c" />

        <Switch
            android:id="@+id/switch_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:text="OK"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_c"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/tv_test_e"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/test_e"
            android:textColor="@color/white"
            android:textSize="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_test_d" />

        <Switch
            android:id="@+id/switch_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:text="OK"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_d"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/tv_test_f"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/test_f"
            android:textColor="@color/white"
            android:textSize="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_test_e" />

        <Switch
            android:id="@+id/switch_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="40dp"
            android:text="OK"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_e"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/tv_test_g"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="Bemerkungen:"
            android:textColor="@color/white"
            android:textSize="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_test_f" />

        <EditText
            android:id="@+id/et_bemerkungen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textSize="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_test_g" />

        <Button
            android:id="@+id/btn1_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="45dp"
            android:backgroundTint="@color/orange"
            android:text="zurrück"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn1_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="45dp"
            android:backgroundTint="@color/orange"
            android:text="fertig"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>