<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_gray"
        tools:context=".PruefungFragment">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="126dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="127dp"
            android:text="@string/G607_Header"
            android:textColor="@color/orange"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="148dp"
            android:text="@string/Kunde_Name"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_Kennzeichen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="65dp"
            android:text="Kennzeichen"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_fahrzeugtyp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="65dp"
            android:text="@string/Fahrzeug"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_VIN" />

        <TextView
            android:id="@+id/tv_VIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="65dp"
            android:text="@string/Fahrgestellnummer"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Kennzeichen" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="17dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/et_kennzeichen"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_typ"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="17dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_vin" />

        <EditText
            android:id="@+id/et_vin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="17dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_kennzeichen" />

        <Button
            android:id="@+id/btnft_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="45dp"
            android:backgroundTint="@color/orange"
            android:text="zurrück"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnft_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="45dp"
            android:backgroundTint="@color/orange"
            android:text="weiter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>